# lexicon-induction

./: .gitignore  README.md  pyproject.toml
.github/workflows/: lint.yaml
lexicon_induction/corpora/dgs/: README.md  dataset.json  dgs_utils.py  download_dataset.py  recognize_signs.py
